--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
   "format_version": 1,
   "header": {
-    "description": "Api for minecraft",
+    "description": "Api for minecraft\nThis use Beta Api",
     "name": "Zxra §4§lApi",
     "uuid": "dfbbd51f-3177-422b-80e7-111fb105ad65",
     "version": [
-      0,
+      1,
       3,
-      2
+      0
     ],
     "min_engine_version": [
       1,
@@ -43,9 +43,9 @@
       "type": "data",
       "uuid": "8b8d2a0b-a206-4f0a-908c-718e5f7b611a",
       "version": [
-        0,
+        1,
         3,
-        2
+        0
       ]
     },
     {
@@ -55,7 +55,7 @@
       "entry": "scripts/main.js",
       "version": [
         1,
-        0,
+        3,
         0
       ]
     }
