--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,8 @@
     "name": "Zxra §4§lApi",
     "uuid": "dfbbd51f-3177-422b-80e7-111fb105ad65",
     "version": [
-      1,
-      3,
+      2,
+      5,
       0
     ],
     "min_engine_version": [
@@ -37,14 +37,19 @@
       "version": "1.0.0-beta"
     }
   ],
+  "metadata": {
+    "authors": [
+      "CrzxaExe"
+    ]
+  },
   "modules": [
     {
       "description": "Zxra Api",
       "type": "data",
       "uuid": "8b8d2a0b-a206-4f0a-908c-718e5f7b611a",
       "version": [
-        1,
-        3,
+        2,
+        5,
         0
       ]
     },
@@ -54,8 +59,8 @@
       "uuid": "ad31a838-4958-4542-a8f8-c7014860d578",
       "entry": "scripts/main.js",
       "version": [
-        1,
-        3,
+        2,
+        5,
         0
       ]
     }
